<resources>
    <string name="app_name">TicTacToe</string>
    <string name="splash_welcome_message">Welcome to GoalPlan</string>
    <string name="start_game">Start game</string>
    <string name="resume_game">Resume game</string>
    <string name="game_statistics">Game Statistics</string>
    <string name="reset_statistics">Reset Statistics</string>
    <string name="you">You</string>
    <string name="draw">Draw</string>
    <string name="computer">Computer</string>
    <string name="games">Games</string>
    <string name="you_lost">You Lost!</string>
    <string name="you_won">You Win!</string>
    <string name="you_draw">It\'s a Draw!</string>
    <string name="play_again">Play again</string>
    <string name="back_home">Back Home</string>
    <string name="total_game">Total game : %1$d</string>
    <string name="computer_is_thinking">Wait! It is computer\'s turn.</string>
</resources>