<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <TextView
        android:id="@+id/result_text"
        style="@style/Headline.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_xxlarge"
        app:layout_constraintStart_toStartOf="@+id/app_name_text"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text"
        android:visibility="gone"
        android:text="@string/you_lost" />

    <com.ulusoyapps.tictactoe.main.ui.AppNameTextView
        android:id="@+id/app_name_text"
        style="@style/Headline.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"
        tools:text="@string/app_name" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/result_text"
        android:layout_marginStart="@dimen/size_spacing_xxlarge"
        android:layout_marginEnd="@dimen/size_spacing_xxlarge"
        app:layout_constraintBottom_toTopOf="@+id/scoreboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        app:lottie_rawRes="@raw/hand_shake" />

    <com.ulusoyapps.tictactoe.main.ui.TicTacToeGrid
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scoreboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text"
        android:visibility="visible" />

    <com.ulusoyapps.tictactoe.main.ui.Scoreboard
        android:id="@+id/scoreboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/top_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_spacing_xxlarge"
        android:layout_marginEnd="@dimen/size_spacing_xxlarge"
        android:layout_marginBottom="@dimen/size_spacing_small"
        tools:text="@string/start_game"
        app:layout_constraintBottom_toTopOf="@+id/centerGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_small"
        tools:text="@string/game_statistics"
        app:layout_constraintEnd_toEndOf="@+id/top_button"
        app:layout_constraintStart_toStartOf="@+id/top_button"
        app:layout_constraintTop_toBottomOf="@+id/centerGuideline" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        app:constraint_referenced_ids="top_button,bottom_button" />

</androidx.constraintlayout.widget.ConstraintLayout>