<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/opaque_gray">

    <ImageView
        android:id="@+id/circle_image"
        android:layout_width="@dimen/size_spacing_large"
        android:layout_height="@dimen/size_spacing_large"
        android:layout_marginStart="@dimen/size_spacing_xxxxlarge"
        android:layout_marginTop="@dimen/size_spacing_large"
        android:src="@drawable/ic_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/you_text"
        style="@style/Body.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_medium"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/circle_image"
        app:layout_constraintStart_toStartOf="@+id/circle_image"
        app:layout_constraintTop_toBottomOf="@+id/circle_image" />

    <ImageView
        android:id="@+id/cross_image"
        android:layout_width="@dimen/size_spacing_large"
        android:layout_height="@dimen/size_spacing_large"
        android:layout_marginTop="@dimen/size_spacing_large"
        android:layout_marginEnd="@dimen/size_spacing_xxxxlarge"
        android:src="@drawable/ic_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Body.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_medium"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@+id/cross_image"
        app:layout_constraintStart_toStartOf="@+id/cross_image"
        app:layout_constraintTop_toBottomOf="@+id/cross_image" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Body.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/you_text" />

    <TextView
        android:id="@+id/games_text"
        style="@style/Data.XLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_spacing_medium"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        style="@style/Data.XLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_medium"
        android:layout_marginBottom="@dimen/size_spacing_medium"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/circle_image"
        app:layout_constraintStart_toStartOf="@+id/circle_image"
        app:layout_constraintTop_toBottomOf="@+id/you_text" />

    <TextView
        style="@style/Data.XLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_spacing_medium"
        android:layout_marginBottom="@dimen/size_spacing_medium"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cross_image"
        app:layout_constraintStart_toStartOf="@+id/cross_image"
        app:layout_constraintTop_toBottomOf="@+id/you_text" />


</androidx.constraintlayout.widget.ConstraintLayout>